Update routing configuration in vercel.json
- Replaced rewrites with routes for improved routing handling.
- Configured filesystem handling and updated destination for all requests to redirect to index.html.

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html",
-      "missing": [{ "type": "file" }]
-    }
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
 
